--- a/assets/css/controls.css
+++ b/assets/css/controls.css
@@ -1,1 +1,87 @@
 /* Video Player - An open source project */
+
+.video-controls{
+
+}
+
+.video-controls-left{
+	width: 33.33%;
+	display: inline-block;
+}
+
+.video-controls-left ul{
+	display: block;
+	list-style: none;
+}
+
+.video-controls-left li{
+	display: inline-block;
+	padding: 0.5em;
+}
+
+
+.video-controls-left button {
+    cursor: pointer;
+    position: relative;
+    width: 100%;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    border: 0;
+    outline: 0;
+    background: transparent;
+}
+
+
+#playPause .left, 
+#playPause .right {
+    position: absolute;
+    top:0;
+    display: block;
+    width:100%;
+    height: 100%;
+    background-color: transparent;
+    transition: all .1s ease, color 0.4s ease;
+}
+
+#playPause .left,
+#playPause .right{
+    width: 0px;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 20px solid #ffffff;
+    border-right: 0px solid transparent;
+    box-sizing: border-box;
+}
+#playPause .left{ left: 0; opacity: 1;}
+#playPause .right{ right: 0; opacity: 0; }
+
+#playPause[data-play=true] .left,
+#playPause[data-play=true] .right{
+    opacity: 1;
+    border-top: 0px solid transparent;
+    border-bottom: 0px solid transparent;
+    border-left: 5px solid #ffffff;
+    border-right: 0px solid transparent;
+}
+
+/* The Stop Button */
+#stop span{
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+    display: block;
+    background: #ffffff;
+    height: 100%;
+    width: 100%;
+}
+
+/* TIME */
+#time{
+    font-size: 1.42em;
+}
