--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,13 +1,17 @@
 /* Video Player - An open source project */
 
-.videoWrapper{
+.videoContainer{
     width: 100%;
     height: 100%;
     position: relative;
     background: black;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
-#videoContainer{
+#videoWrapper{
     position: relative;  height: 0; overflow: hidden; max-width: 100%;
         position: relative;
     /* padding-bottom: 5%; */
@@ -41,8 +45,11 @@ video-progress{
     padding: 1em;
     position: absolute;
     bottom: 0;
-    background:rgba(0, 0, 0, .8);
-    color:#efefef;
+    background: rgba(0, 0, 0, 0.85);
+    color: #efefef;
+    border-color: transparent;
+    /* background-position: unset; */
+    box-shadow: 0px -5px 14px 10px rgba(0, 0, 0, 0.85);
     box-sizing: border-box;
 }
 
@@ -77,6 +84,7 @@ video-progress{
     background-color: #2a84cd;
     background-color: red;
 }
+
 
 
 /* Wide */
