Changed video-controls bar
Decreased the time, to which if no mouse event occurs on the video element causing the video-controls bar to hide.

Also, removed the box-shadow on video-controls bar (Wasn't looking good at all)

--- a/assets/css/controls.css
+++ b/assets/css/controls.css
@@ -17,6 +17,7 @@
 .video-controls-left li{
 	display: inline-block;
 	padding: 0.5em;
+    margin: auto 0.8em;
 }
 
 
@@ -33,6 +34,15 @@
     border: 0;
     outline: 0;
     background: transparent;
+}
+
+#videoControlsAndProgress{
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    box-sizing: border-box;
+    display: block;
 }
 
 
