--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -13,7 +13,7 @@
 
 #videoWrapper{
     position: relative;  height: 0; overflow: hidden; max-width: 100%;
-        position: relative;
+    position: relative;
     /* padding-bottom: 5%; */
     height: 100vh;
     overflow: hidden;
@@ -42,14 +42,13 @@ video-progress{
 
 .video-controls{
     width: 100%;
-    padding: 1em;
+    padding: 1em 0.4em;
     position: absolute;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.85);
+    background: rgba(0, 0, 0, 0.9);
     color: #efefef;
     border-color: transparent;
-    /* background-position: unset; */
-    box-shadow: 0px -5px 10px 10px rgba(0, 0, 0, 0.85);
+    /*box-shadow: 0px -5px 10px 10px rgba(0, 0, 0, 0.85);*/
     box-sizing: border-box;
 }
 
