--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -12,9 +12,7 @@
 }
 
 #videoWrapper{
-    position: relative;  height: 0; overflow: hidden; max-width: 100%;
     position: relative;
-    /* padding-bottom: 5%; */
     height: 100vh;
     overflow: hidden;
     max-width: 100%;
@@ -23,11 +21,9 @@
 #video{
     position: absolute;
     top: 0;
-    /* left: 0; */
     width: 100%;
     height: 100%;
     max-width: 100%;
-    /* box-sizing: border-box; */
     max-height: 100%;
     min-height: 50%;
     object-fit: contain;
@@ -35,32 +31,40 @@
 
 .video-top-bar{
     color: white;
-    background-color: rgba(0, 0, 0, 0.7);
-    padding:1em 0.4em;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1;
+    padding:1em 0.4em;
     box-sizing: border-box;
+    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.08);
+    background-image: linear-gradient(180deg,rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.08));
+    z-index: 1;
+}
+
+.video-bottom-bar{
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    padding: 4em 0.4em 1em;
+    box-sizing: border-box;
+    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.08);
+    background-image: linear-gradient(0deg,rgba(0, 0, 0, 0.9),rgba(0, 0, 0, 0.08));
+    z-index: 0;
 }
 
 .video-progress{
     width: 100%;
-    position: absolute;
-    bottom:2em;
     box-sizing: border-box;
 }
 
 .video-controls{
     width: 100%;
-    padding: 1em 0.4em;
-    position: absolute;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.9);
+    background: transparent;
     color: #efefef;
     border-color: transparent;
-    /*box-shadow: 0px -5px 10px 10px rgba(0, 0, 0, 0.85);*/
     box-sizing: border-box;
 }
 
@@ -68,8 +72,6 @@
     width: 100%;
     display: block;
     padding: 10px 0;
-    position: absolute;
-    bottom: 3em;
 }
 
 .video-progress progress {
