--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -19,6 +19,31 @@
     max-width: 100%;
 }
 
+/* Show Play/Pause icon in the center when the user clicks on the video */
+.videoCenter{
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    top: 45%;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
+    font-size: 2em;
+    transition: all 0.5s ease;
+}
+
+.videoCenter i{
+    padding: 1em 1.10725em;
+    background-color: rgba(0, 0, 0, 0.28);
+    border-radius: 360px;
+    box-sizing: border-box;
+}
+
+#centerPlayPause{
+    display: none;
+}
+
+
 #video{
     position: absolute;
     top: 0;
